src/objects/BT_CO_CMISPOP_ImportVendorProfile__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Job_Id__c</fullName>
        <label>Batch_Job_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Run_Date__c</fullName>
        <label>Batch Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Validation_Details__c</fullName>
        <label>Validation Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Validation_Status__c</fullName>
        <label>Validation Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blockHouseNumber__c</fullName>
        <label>blockHouseNumber</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>buildingName__c</fullName>
        <label>buildingName</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>faxNumber__c</fullName>
        <label>faxNumber</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gstRegistrationNumber__c</fullName>
        <label>gstRegistrationNumber</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>handphoneNumber__c</fullName>
        <label>handphoneNumber</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>level__c</fullName>
        <label>level</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nricPassport__c</fullName>
        <label>nricPassport</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pagerNumber__c</fullName>
        <label>pagerNumber</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>postalCode__c</fullName>
        <label>postalCode</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>registeredName__c</fullName>
        <label>registeredName</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>streetName__c</fullName>
        <label>streetName</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telephoneOffice__c</fullName>
        <label>telephoneOffice</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>telephoneResidence__c</fullName>
        <label>telephoneResidence</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>unitNumber__c</fullName>
        <label>unitNumber</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vendorCode__c</fullName>
        <label>vendorCode</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vendorGroup__c</fullName>
        <label>vendorGroup</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vendorName__c</fullName>
        <label>vendorName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vendorStatus__c</fullName>
        <label>vendorStatus</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vendorType__c</fullName>
        <label>vendorType</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zoneCode__c</fullName>
        <label>zoneCode</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>BT_CO_CMISPOP_ImportVendorProfile</label>
    <nameField>
        <label>BT_CO_CMISPOP_ImportVendorProfile Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT_CO_CMISPOP_ImportVendorProfile</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>